Fixing vertical spacing after menu

--- a/css/socvr.css
+++ b/css/socvr.css
@@ -10,7 +10,7 @@ body {
 table {
   border-collapse: separate;
   border-spacing: 6vw 0;
-  margin: 0 auto 50px auto;
+  margin: 0 auto 15px auto;
 }
 th, td {
   padding: 0;
@@ -27,4 +27,13 @@ a {
 
 a:focus,a:hover {
   text-decoration: underline;
+}
+
+#submenu {
+  margin-bottom: 50px;
+}
+
+#submenu table {
+   border-top: thin solid gray;
+   padding-top: 15px;
 }
